# genesis

./: .gitignore  Dockerfile  LICENSE  README.md  check_install.sh  docker-compose.yml  export_simulation.py  fly.toml  genesis_ui.py  install-docker.sh  install.sh  requirements-test.txt  requirements.txt  setup.py  simple_vis.py  sphere_trajectory.csv  start.sh  test-ompl.dockerfile
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml
data/: sphere_trajectory.csv
docs/: index.md  performance_optimization_report.md  real_execution_proof.md  rust_vs_python_performance.md
docs/core/: entity.md  scene.md
docs/physics/: forces.md  materials.md  solvers.md
docs/utils/: morphs.md  options.md  tools.md
docs/visualization/: recording.md  renderers.md  viewer.md
examples/: falling_sphere.py
memory/agents/: README.md
memory/sessions/: README.md
rust_env_awareness/: BUILD.md  Cargo.toml  README.md
rust_env_awareness/examples/: benchmark.rs  integration.rs
rust_env_awareness/src/: anomaly.rs  lib.rs  main.rs  neural.rs  predictor.rs  sensors.rs  spatial.rs
tests/: test_simulation.py  test_simulation_integration.py
ui/: app.py
ui/components/: __init__.py  analysis_panel.py  config_panel.py  control_panel.py  object_panel.py  output_panel.py  visualization_panel.py
ui/simulation/: analysis_manager.py  simulation_manager.py
ui/tests/: __init__.py  run_tests.py  run_ui_tests.py  test_app.py  test_console_logger.py  test_object_panel.py  test_simulation_manager.py  test_ui_components.py  (+1 more)
(+4 files in other folders)
