[package]
name = "genesis_env_awareness"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance-focused libraries
rayon = "1.8"  # Parallel processing
packed_simd_2 = "0.3"  # SIMD operations
ahash = "0.8"  # Fast hashing

# Time and benchmarking
chrono = "0.4"
criterion = "0.5"  # Benchmarking

# Optional: async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "env_awareness_bench"
harness = false